--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,35 @@
 h2{
     text-align: center
 }
-.btn1{
+
+.avail {
+    background-color: rgba(7, 236, 221, 0.961);
+
+    white-space: nowrap;
+
+    width: 97.2%;
+    display: flex;
+	flex-direction: row;
     text-align: center;
-    margin-left:500px;
+	padding: 0% 0.5% 0% 0.5% ;
+   color:black;
+	width: 100%;
+	margin: 0%;
+			
 }
-.btn2{
-    margin-left:180px;
+.avail .btn1,.btn2 {
+    display: inline;
+    color:black;
+    background-color: rgba(7, 236, 221, 0.961);
+    text-align: center;
+    text-decoration: none;
+    margin-left: 30px;
+    font-size: 15px;
+    border-style: hidden;
+}
+.avail .btn1:hover,.btn2:hover {
+    background-color: black;
+   
+    color: rgba(7, 236, 221, 0.961);
+    
 }
