--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -3,15 +3,49 @@ form{
 	padding: 3%;
 	padding-top: 20px;
 	font-weight: bold;
-	margin: 12%;
+	margin: 7%;
 	font-size: 15px;
 	margin-left: 425px ;
 	box-shadow: 3px 3px 3px #ccc;
 	border: 0.5px solid #ccc;
     text-align: center;
+	background-color: rgba(7, 236, 221, 0.961);
 
 }
 h2.pageTitle{
     text-align: center;
+	color: rgba(7, 236, 221, 0.961);
 
 }
+
+.mat-form-field{
+	width: 330px;
+	margin-bottom: 20px;
+	appearance: fill;
+}
+/*
+.mat-button{
+	width: 100%;
+}
+.mat-label{
+	color: rgb(255, 255, 255);
+	background-color:aquamarine ;
+}
+.mat-input-element{
+	background-color: white;
+	color: black;
+	border-color: #ccc;
+	padding: 5px;
+	width: 80%;
+	border-radius: 5px;
+}
+.mat-input-element::placeholder{
+	color: #999;
+}
+.mat-form-field-appearance-outline .mat-form-field-outline{
+	color: #333;
+	border-color: #ccc;
+}
+.mat-form-field-appearance-outline .mat-form-field-underline{
+	display: none;
+}*/
