added services and material UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,11 @@
 <!--<app-login></app-login>
 <app-dashboard></app-dashboard>-->
+<br><br>
 <br><div class="avail">
-
+  <button class="btn2" (click)="homePage()" >Home</button>
 <button class="btn1" (click)="loginPage()" >Click to Login</button>
-
-<button class="btn2" (click)="dashboardPage()" >Click here to Dashboard</button>
 
 </div>
 <router-outlet></router-outlet>
 
 
-<!--<p>
-    
-    <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle value="bold">Bold</mat-button-toggle>
-      <mat-button-toggle value="italic">Italic</mat-button-toggle>
-      <mat-button-toggle value="underline">Underline</mat-button-toggle>
-    </mat-button-toggle-group>
-  </p>-->
