--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <br><br><h2 class="pageTitle">Login</h2>
 <form>
     <div>
-        <mat-form-field  appearance="fill">
+        <mat-form-field>
             <mat-label >Username : </mat-label>
             <input matInput [(ngModel)]="username" name="username" type="text" placeholder="Enter your username" required="" ><br><br>
         </mat-form-field> 
