--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,36 +1,8 @@
-<!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
--->
-<br><h2>Dashboard</h2>
+<br><br><br>
+<h2>Dashboard</h2><br>
 <div class="dbpage">
-    <table  mat-table [dataSource]="values" class="mat-elevation-z8" dbTable>
-        <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> Index </th>
-            <td mat-cell *matCellDef="let element;let i=index"> {{i}} </td>
-
-        </ng-container>
-
-        <ng-container matColumnDef="value">
-            <th mat-header-cell *matHeaderCellDef> Value </th>
-            <td mat-cell *matCellDef="let element"> {{element}} </td>
-
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-       <!-- <tr></tr>
-        <tr>
-            <th>Index</th>
-            <th>Value</th>
-        </tr>
-        <tr *ngFor="let n of values;index as i">
-            <td>{{i}}</td>
-            <td>{{n}}</td>
-        </tr>-->
-    </table><br><br>
-    <div class="input">
-    <input [(ngModel)]="newValue" placeholder="Add new Value">
-    <button mat-raised-button (click)="addValue(newValue)">Add Value</button>
+    <app-operations></app-operations>   
+  </div>
+<div class="logout-button">
+  <button mat-raised-button color="primary" (click)="logout()">Log out</button>
 </div>
-</div>
-
